@@ -8,7 +8,7 @@
     <name>gesticulate-fx</name>
 
     <packaging>jar</packaging>
-    <version>1.0</version>
+    <version>1.1</version>
 
     <organization>
         <!-- Used as the 'Vendor' for JNLP generation -->
@@ -19,6 +19,7 @@
         <java.version>25</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>25-ea+29</javafx.version>
+        <dagger.version>2.57.1</dagger.version>
         <slf4j.version>2.0.17</slf4j.version>
         <log4j.version>2.25.1</log4j.version>
         <batik.version>1.19</batik.version>
@@ -61,14 +62,20 @@
             <version>${javafx.version}</version>
         </dependency>
 
-        <!-- Guice -->
+        <!-- Dagger -->
 
         <dependency>
-            <groupId>com.cathive.fx</groupId>
-            <artifactId>fx-guice</artifactId>
-            <version>8.0.0</version>
+            <groupId>com.google.dagger</groupId>
+            <artifactId>dagger</artifactId>
+            <version>${dagger.version}</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+
         <!-- Apache Batik -->
 
         <dependency>
@@ -230,16 +237,6 @@
                 <version>1.3.5</version>
             </dependency>
             <dependency>
-                <groupId>com.google.inject</groupId>
-                <artifactId>guice</artifactId>
-                <version>6.0.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>33.4.8-jre</version>
-            </dependency>
-            <dependency>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-controls</artifactId>
                 <version>${javafx.version}</version>
@@ -267,7 +264,7 @@
                 </executions>
                 <configuration>
                     <executable>${env.JAVA_HOME}/bin/java</executable>
-                    <commandlineArgs>-cp %classpath --add-opens=java.base/java.lang=ALL-UNNAMED --module-path ${env.JAVAFX_HOME}/lib --add-modules=javafx.controls,javafx.fxml,javafx.swing -XX:+ShowCodeDetailsInExceptionMessages --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED --enable-native-access=javafx.graphics net.perspective.draw.Gesticulate</commandlineArgs>
+                    <commandlineArgs>-cp %classpath --add-opens=java.base/java.lang=ALL-UNNAMED --module-path ${env.JAVAFX_HOME}/lib --add-modules=javafx.controls,javafx.fxml,javafx.swing -XX:+ShowCodeDetailsInExceptionMessages --enable-native-access=ALL-UNNAMED --enable-native-access=javafx.graphics net.perspective.draw.Gesticulate</commandlineArgs>
                 </configuration>
             </plugin>
 
@@ -284,6 +281,13 @@
                         <arg>-Xlint:unchecked</arg>
                         <arg>-proc:full</arg>
                     </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>com.google.dagger</groupId>
+                            <artifactId>dagger-compiler</artifactId>
+                            <version>${dagger.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
 
